# AdventOfCode

./: .gitignore
2015_1/: main.c
2015_2/: main.c
2015_3/: main.c
2015_4/: Input1.txt  key.tmp  main.c  ms_example.c
2015_5/: TestIn.txt  main.c
2015_6/: Common.h  Part1.c  Part1.h  Part2.c  Part2.h  main.c
2015_7/: CMakeLists.txt  main.c
2015_8/: CMakeLists.txt  TestIn.txt  main.c
2025_1/: CMakeLists.txt  main.c
2025_2/: CMakeLists.txt  main.c
2025_3/: CMakeLists.txt  main.c
2025_4/: CMakeLists.txt  main.c
2025_5/: CMakeLists.txt  TestIn.txt  main.c
